# US_Flight_Data

./: .env.example  .gitignore  README.md  docker-compose.yml  mypy.ini  performance.md  pyproject.toml
config/: settings.py
database/: schema.sql
src/aggregation/: aggregate.py
src/cleaning/: clean.py
src/ingestion/: ingest_raw.py
src/models/: flight.py
src/pipeline/: run_pipeline.py
src/visualization/: app.py
tests/: test_aggregations.py  test_cleaning.py  test_models.py
