[project]
name = "bigdatafinalproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cassandra-driver[ev]>=3.30.0",
    "gevent>=26.4.0",
    "loguru>=0.7.3",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
